leetcode 39